2022-02-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c,
    gpasm/gpmsg.c,
    gpasm/gpmsg.h,
    gpasm/testsuite/gpasm.project/asmfiles/return_12bit.asm,
    gpasm/testsuite/gpasm.project/asmfiles/return_14bit.asm,
    gpasm/testsuite/gpasm.project/asmfiles/return_16bit.asm,
    gpasm/testsuite/gpasm.project/hexfiles/return_12bit.hex,
    gpasm/testsuite/gpasm.project/hexfiles/return_14bit.hex,
    gpasm/testsuite/gpasm.project/hexfiles/return_16bit.hex,
    gpasm/testsuite/gpasm.project/listfiles/return_12bit.lst,
    gpasm/testsuite/gpasm.project/listfiles/return_14bit.lst,
    gpasm/testsuite/gpasm.project/listfiles/return_16bit.lst:
    Fixed bug: "#315 gpasm allows RETURN for 10F202"
    Thanks to Kurt Deitrick for the bugreport.

2022-02-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpopcode.h,
    gpasm/testsuite/gpasm.project/asmfiles/tris_12bit.asm,
    gpasm/testsuite/gpasm.project/hexfiles/tris_12bit.hex,
    gpasm/testsuite/gpasm.project/listfiles/tris_12bit.lst:
    Fixed bug: "#314 PIC16F69 TRIS does not assemble correctly"
    Thanks to John Dunton for the bugreport.
    Thanks to Robert Pearce for the patch.

2022-02-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c,
    gpasm/testsuite/regression/source/elif.asm:
    Fixed bug: "#318 ELIF is not ELSE IF, bug or unusual name?"
    Thanks to Anders Andersson for the bugreport.
    Thanks to Robert Pearce for the patch.

2022-02-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/12f1571_g.lkr,
    lkr/12lf1571_g.lkr,
    libgputils/gpprocessor.c:
    Rejected this bug report: "#316 incorrect linear_ram_addrs"
    The relevant page of the datasheet contains misleading information.

2022-02-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/12f1571_g.lkr,
    lkr/12lf1571_g.lkr,
    libgputils/gpprocessor.c:
    Fixed bug: "#316 incorrect linear_ram_addrs"
    Thanks to Ben Tesch.
